# dedotalk

./: .gitignore  README.md
dedoslack/: Cargo.toml
dedoslack/src/: main.rs
dedotalk3/: Cargo.toml
dedotalk3/src/: main.rs
rust_for_python_dev/pyo3_examples/: Cargo.toml  README.md  pyproject.toml
rust_for_python_dev/pyo3_examples/src/: lib.rs
rust_for_python_dev/python_examples/: csv_reading.py  dict_comprehension.py  list_comprehension.py
rust_for_python_dev/rust_examples/: Cargo.toml
rust_for_python_dev/rust_examples/src/: csv_reading.rs  main.rs
