[package]
name = "botslack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack-morphism = {version="1.11.0", features=["axum"]}
tokio = { version = "1", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.6" }
tracing = "0.1"
hyper = { version ="0.14", features = ["http2","server", "client", "h2", "stream"]}
http = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = {version="0.3.17",  features = ["env-filter"] }
redis = {version="0.23.0", features = ["r2d2", "aio", "connection-manager", "tokio-comp", "tokio"] }
